   * Now resolves device names into drive letters - e.g. "\Device\Harddisk1\FileName" into 
     "C:\FileName".
   * Properly verifies system components instead of just checking file permissions
   * Configurable dangerous-process-names highlighting
   * Added protection against PEB file name spoofing
   * Customizable fonts
   * Command line switch: -m to hide Process Hacker
 * FIXED:
   * Small UI enabling/disabling fixes
   * Now the process tree and service list update instantly after 
     starting Process Hacker instead of waiting
   * Random "Generic GDI+ Error" exceptions
   * Small performance improvements
   * Now shows proper command lines of programs where they contain null characters
   * Handle filter actually works now
   * Relative RunDLL targets
   * Bug #2527154 - "Process Hacker crashes on Win XP"

1.3.1.0
 * SUMMARY: This version adds many small but useful features. It is 
   also more useful when trying to fight malware, thanks to 
   digital signature verification and packed executable detection.
 * NEW:
   * "Free" and "Decommit" actions for memory regions
   * "Description" column for processes
   * Current Directory for processes automatically updates
   * Can now display the file names of DRM-protected 
     processes (like audiodg.exe)
   * Now displays thread information under the thread list
   * Module file name info for thread start addresses 
     and stack traces
   * Highlighting for .NET processes and packed executables
   * Shows CPU usage and physical memory usage in the status bar
   * "Reload Struct Definitions" menu item
   * Struct Searcher - displays addresses which match the specified 
     struct definition
   * Ability to unload remote modules (by remote thread 
     injection)
   * New float and double types for structs
   * Special tooltip info for rundll32.exe
   * Verifies file signatures (and detects Windows components by 
     checking the files' owners and ACLs)